test/expected/explain_a0i.out
explain int a[0]
             ^
14: error: array size must be greater than 0
